samples/_failures_safe/1761085778_a0dbcd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7fba884f.c: In function ‘main’:
./samples/SAFE/__tmp_7fba884f.c:174:13: error: expected declaration or statement at end of input
  174 |             break;
      |             ^~~~~
./samples/SAFE/__tmp_7fba884f.c:174:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7fba884f.c:174:13: error: expected declaration or statement at end of input
